switch to new reflection API
This fixes all code warnings